--- a/src/main/resources/META-INF/resources/css/components/page-footer.css
+++ b/src/main/resources/META-INF/resources/css/components/page-footer.css
@@ -16,8 +16,8 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 .page-footer {
-    padding: var(--lumo-space-m);
-    border-top: 1px solid darkgray;
+    padding: var(--vaadin-padding-m);
+    border-top: 1px solid var(--vaadin-border-color);
     font-style: italic;
-    font-size: var(--lumo-font-size-s);
+    font-size: var(--aura-font-size-s);
 }
