feat: add CSV import for ClubDesk exports #1
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/META-INF/resources/css/styles.css
+++ b/src/main/resources/META-INF/resources/css/styles.css
@@ -21,4 +21,5 @@
 @import "components/page-footer.css";
 @import "components/navigation-bar.css";
 
+@import "views/clubdesk-import-view.css";
 @import "views/login-view.css";
