--- a/src/main/resources/META-INF/resources/css/views/clubdesk-import-view.css
+++ b/src/main/resources/META-INF/resources/css/views/clubdesk-import-view.css
@@ -1,4 +1,4 @@
-/*
+/**
  * DukeOps - iJUG Self-Service Portal
  * Copyright (C) Marcus Fihlon and the individual contributors to DukeOps.
  *
@@ -15,25 +15,10 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
-package eu.ijug.dukeops.infra.ui.vaadin.init;
+.clubdesk-import-view vaadin-upload {
+    max-width: 500px;
+}
 
-import com.vaadin.flow.component.UI;
-import org.jetbrains.annotations.NotNull;
-
-/**
- * <p>Functional interface for performing initialization logic on a newly created Vaadin {@link UI} instance.</p>
- *
- * <p>Implementations are invoked during UI creation to apply cross-cutting UI-related configuration such as locale
- * detection, link configuration, or other UI-scoped setup tasks.</p>
- */
-@FunctionalInterface
-public interface UIInitializer {
-
-    /**
-     * <p>Applies initialization logic to the given Vaadin {@link UI} instance.</p>
-     *
-     * @param ui the Vaadin UI instance to initialize
-     */
-    void initialize(@NotNull UI ui);
-
+.clubdesk-import-view .error {
+    color: var(--aura-red-text);
 }
